#11 Import Vocabulary You can give an absolute path to a file and you get a binary search tree with a root node as a result

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-#output
-target
-classes
-out
-
-#IDE/Project data
-Scrabble.iml
 .idea
 .project
+.gitignore
+out
+classes
 .classpath
+Scrabble.iml
