--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>jdom2</artifactId>
             <version>2.0.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
